tests/testcases/invalid/semantic/62_this_delete_pointer.ciel
// Error: Attempting to delete 'this' pointer

class MyClass {
    public:
        int value;

        void self_destruct() {
            delete this;  // Error: Dangerous/invalid to delete 'this'
            return;
        }
};

int main() {
    class MyClass obj;
    obj.value = 10;
    obj.self_destruct();
    return 0;
}
